<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".StartersScreen">

    <fragment
        android:id="@+id/fragment5"
        android:name="com.example.recipeapp.TopFragment"
        android:layout_width="419dp"
        android:layout_height="187dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/top_fragment" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="185dp"
        android:text="@string/starters"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment5" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="2dp"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment5"
            app:layout_constraintVertical_bias="0.477">

            <Button
                android:id="@+id/bhelpuriButton"
                android:layout_width="185dp"
                android:layout_height="102dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bhellpuri"
                android:gravity="bottom|center_horizontal"
                android:onClick="clickToVisitBhelpuri"
                android:text="@string/bhelpuri" />

            <Button
                android:id="@+id/cutletButton"
                android:layout_width="185dp"
                android:layout_height="102dp"
                android:layout_row="0"
                android:layout_column="2"
                android:background="@drawable/cutlet"
                android:gravity="bottom|center_horizontal"
                android:onClick="clickToVisitCutlet"
                android:text="@string/crunchy" />

            <Button
                android:id="@+id/dhoklaButton"
                android:layout_width="185dp"
                android:layout_height="102dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginBottom="10dp"
                android:background="@drawable/dhokla"
                android:gravity="bottom|center_horizontal"
                android:onClick="clickToVisitDhoklaRecipe"
                android:text="@string/dhokla" />

            <Button
                android:id="@+id/momosButton"
                android:layout_width="185dp"
                android:layout_height="102dp"
                android:layout_row="1"
                android:layout_column="2"
                android:background="@drawable/momos"
                android:gravity="bottom|center_horizontal"
                android:onClick="clickToVisitMomosRecipe"
                android:text="@string/momos" />

            <Button
                android:id="@+id/munchurianButton"
                android:layout_width="185dp"
                android:layout_height="102dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginBottom="10dp"
                android:background="@drawable/munchurian"
                android:gravity="bottom|center_horizontal"
                android:onClick="clickToVisitVegMunchurian"
                android:text="@string/munchurian" />

            <Button
                android:id="@+id/paneerRButton"
                android:layout_width="185dp"
                android:layout_height="102dp"
                android:layout_row="2"
                android:layout_column="2"
                android:background="@drawable/rollpaneer"
                android:gravity="bottom|center_horizontal"
                android:text="@string/paneer_r" />

            <Button
                android:id="@+id/vadaButton"
                android:layout_width="185dp"
                android:layout_height="102dp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_marginBottom="10dp"
                android:background="@drawable/vadaa"
                android:gravity="bottom|center_horizontal"
                android:text="@string/vadaa" />

            <Button
                android:id="@+id/springButton"
                android:layout_width="185dp"
                android:layout_height="102dp"
                android:layout_row="3"
                android:layout_column="2"
                android:background="@drawable/springroll"
                android:gravity="bottom|center_horizontal"
                android:text="@string/spring_roll" />

            <Button
                android:id="@+id/alooTikki"
                android:layout_width="185dp"
                android:layout_height="102dp"
                android:layout_row="4"
                android:layout_column="0"
                android:background="@drawable/alootikki"
                android:gravity="bottom|center_horizontal"
                android:onClick="clickToVisitAlooTikki"
                android:text="@string/aloo_tikki" />

            <Button
                android:id="@+id/kebab"
                android:layout_width="185dp"
                android:layout_height="102dp"
                android:layout_row="4"
                android:layout_column="2"
                android:background="@drawable/kebab"
                android:gravity="bottom|center_horizontal"
                android:text="@string/kebab" />
        </GridLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>