<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/quickRecipeText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="216dp"
        android:text="@string/quick_recipes"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vegText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="12dp"
        android:autoLink="all"
        android:clickable="true"
        android:focusable="true"
        android:onClick="clickToVisitVeg"
        android:text="@string/vegetarian"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegImageView" />

    <TextView
        android:id="@+id/nonVegText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:onClick="clickToVisitNonVeg"
        android:text="@string/non_vegetarian"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nonVegImageView" />

    <ImageView
        android:id="@+id/vegImageView"
        android:layout_width="180dp"
        android:layout_height="102dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="30dp"
        android:onClick="clickToVisitVeg"
        app:layout_constraintEnd_toStartOf="@+id/nonVegImageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quickRecipeText"
        app:srcCompat="@drawable/veg"
        android:contentDescription="@string/vegimage" />

    <ImageView
        android:id="@+id/nonVegImageView"
        android:layout_width="170dp"
        android:layout_height="112dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="28dp"
        android:onClick="clickToVisitNonVeg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quickRecipeText"
        app:srcCompat="@drawable/non"
        android:contentDescription="@string/nonvegimage" />

    <TextView
        android:id="@+id/moreOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/you_might_like_these"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegText" />
</android.support.constraint.ConstraintLayout>